--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<image src="https://github.com/Blusasa/FnF-Branding/blob/main/icon.png"></image>
-<image src="https://github.com/Blusasa/FnF-Branding/blob/main/Fish-Icon.png"></image>
+<image src="icon.png"></image>
+<image src="Fish-Icon.png"></image>
 </body>
 </html>
